<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kamelo</string>

    <string name="button_ok">Calcular</string>
    <string name="button_register">Registrar</string>

    <string name="text_date">Fecha:</string>
    <string name="text_change_date">Cambiar fecha</string>
    <string name="text_distance">Distancia recorrida:</string>
    <string name="text_km">km</string>
    <string name="text_price">Precio:</string>
    <string name="text_euros_per_litre">€/l</string>
    <string name="text_amount">Importe total:</string>
    <string name="text_euros">€</string>
    <string name="text_consumption">Consumo total:</string>
    <string name="text_litres">l</string>
    <string name="text_avg_consumption">Consumo medio:</string>
    <string name="text_litres_each_hundred_km">l/100km</string>
    <string name="text_h_date">Fecha</string>
    <string name="text_h_distance">Distancia (km)</string>
    <string name="text_h_price">Precio (€/l)</string>
    <string name="text_h_consumption">C. Total (l)</string>
    <string name="text_h_avg_consumption">C. Medio (l/100km)</string>
    
    <string name="option_historical">Historial</string>
</resources>
